# Marvin

./: .gitignore  Dockerfile  LICENSE  Makefile  Marvin_Web.drawio  README.md  developing.py  docker-compose.yml  hello.py  main.py  matplot.py  mediapipe.py  onboarding.md  open_manipulator.urdf.xacro  requirements.txt  sopia.txt  webcam_overlay.py
.github/workflows/: deploy.yml
app/: app.vue  nuxt.config.ts  package-lock.json  package.json
app/components/: AppAlert.vue  VideoChat.vue
app/composables/: useOrthoProj.js  useOrthoProj.ts  usePoseDetection.js  usePoseDetection.ts
app/pages/: about.vue  control.vue  index.vue  test.vue
blender/exports/left_open_manipulator_package/: CMakeLists.txt
blender/exports/left_open_manipulator_package/left_open_manipulator/: CMakeLists.txt
blender/exports/left_open_manipulator_package/left_open_manipulator/urdf/: left_open_manipulator.urdf  left_open_manipulator_relpath.urdf
blender/exports/left_open_manipulator_package/meshes/stl/: chain_link1.stl
blender/exports/left_open_manipulator_package/urdf/: marvin.urdf
blender/exports/marvin/: package.xml
blender/exports/marvin/meshes/stl/: chain_link3.stl  chain_link4.001.stl  chain_link5.stl  chain_link_grip_r.001.stl
blender/exports/marvin/urdf/: marvin.urdf  marvin_relpath.urdf
blender/exports/marvin_with_body/: joint_limits.yml
blender/exports/marvin_with_body/sdf/: marvin.sdf
blender/exports/marvin_with_body/urdf/: marvin.urdf
blender/exports/marvin_with_body_relative/urdf/: marvin.urdf
blender/urdf/: marvin.urdf  open_manipulator.urdf
blender/xacro/: marvin.urdf.xacro  open_manipulator.urdf.xacro
docs/: app.vue  nuxt.config.ts  package-lock.json
docs/pages/: control.vue  index.vue  ros-publisher.vue  test.vue
log/: latest_mixin
noetic_ws/: Dockerfile
ros2_ws/: .bashrc  .gitignore  Dockerfile  update_bashrc.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/marvin/share/marvin/: package.bash  (+4 more)
ros2_ws/log/: latest_build
ros2_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/custom_interfaces/msg/: PoseLandmark.msg
ros2_ws/src/hello_moveit/: CMakeLists.txt  package.xml
ros2_ws/src/hello_moveit/src/: hello_moveit.cpp  publisher.cpp  publisher_lambda_function.cpp  subscriber.cpp
ros2_ws/src/marvin/: package.xml  setup.cfg  setup.py
ros2_ws/src/marvin/launch/: display.launch.py  display_launch.py  display_open_manipulator.launch.py  full.launch.py  mimic_operation.launch.py  web.launch.py
ros2_ws/src/marvin/marvin/: displayJointStates.py  elbowFlexion.py  elbowJoint.py  jointGoalPublisher.py  jointStatePublisher.py  mediapipe.py  operation.py  poseDetection.py  poseDisplay.py  shoulderAdduction.py  shoulderAngleJoint.py  shoulderAngles.py  shoulderFlexion.py  shoulderJoint.py  vector.py
ros2_ws/src/marvin/rviz/: urdf.rviz
ros2_ws/src/marvin/test/: rrbot.urdf.xacro
ros2_ws/src/marvin/urdf/: marvin.urdf  marvin.xacro  open_manipulator.urdf  open_manipulator.urdf.xacro  rrbot.urdf  single_arm.xacro
ros2_ws/src/marvin/urdf2/: marvin.urdf  marvin.urdf.xacro  single_arm.xacro
ros2_ws/src/marvin_control/: CMakeLists.txt  CMakeLists2.txt  package.xml
ros2_ws/src/marvin_control/config/: demo_rviz_config.rviz  marvin_simulated_config.yaml  ros2_controllers.yaml  servo.yaml  servo_parameters.yaml
ros2_ws/src/marvin_control/launch/: demo_ros_api.launch.py  servo.launch.py
ros2_ws/src/marvin_control/src/: joint_trajectory_publisher.cpp  pose_tracking.cpp  subscriber.cpp
ros2_ws/src/marvin_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/marvin_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  marvin.ros2_control.xacro  marvin.srdf  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
ros2_ws/src/marvin_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/src/marvin_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/marvin_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  marvin.srdf  marvin.urdf  marvin.urdf.xacro  moveit_controllers.yaml
ros2_ws/src/marvin_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/src/py_pubsub/: package.xml  setup.py
ros2_ws/src/py_pubsub/launch/: pubsub_launch.py
ros2_ws/src/py_pubsub/py_pubsub/: publisher_member_function.py
ros2_ws/src/test_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/test_moveit/config/: 2dof_robot.ros2_control.xacro  2dof_robot.srdf  2dof_robot.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
ros2_ws/src/test_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
vue-project/: package-lock.json  package.json
vue-project/src/: App.vue  main.js  router.js
vue-project/src/components/: PoseLandmarks.vue  VideoChat.vue
vue-project/src/composables/: useOrthoProj.js  usePoseDetection.js
vue-project/src/utils/: drawingHelpers.js
(+28 files in other folders)
