<package format="2">
  <name>marvin</name>
  <version>def: None</version>
  <description>
    marvin model - Processed by phobos-ci
  </description>
  <author>Jaeho Cho jaeho.cho@cooper.edu</author>
  <maintainer>Jaeho Cho jaeho.cho@cooper.edu</maintainer>
  <url>https://github.com/jaehho/Marvin.git</url>
  <buildtool_depend>catkin</buildtool_depend>
  <!--<depend>roslaunch</depend>-->
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <!--<depend>gazebo</depend>-->
  <export>
    <architecture_independent />
  </export>
</package>